Fix the changes

--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Pratibha Todos Goals</title>
+</head>
+<body>
+
+    <script type='text/javascript'>
 // Library Code
 
 // pure function requirements:
@@ -33,6 +41,8 @@ function createStore(reducer) {
         dispatch
     };
 }
+
+
 // App Code
 const ADD_TODO = 'ADD_TODO'
 const REMOVE_TODO = 'REMOVE_TODO'
@@ -155,3 +165,6 @@ store.dispatch(addGoalAction({
 }))
 
 store.dispatch(removeGoalAction(0))
+    </script>
+</body>
+</html>
