--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Pratibha Todos Goals</title>
+  <title>Pratibha Todos Goals</title>
 </head>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/redux/3.7.2/redux.min.js'></script>
 <body>
-
-<div>
-  <h1>Todo List</h1>
-  <input id='todo' type='text' placeholder='Add Todo' />
-  <button id='todoBtn'>Add Todo</button>
-  <ul id='todos'></ul>
-</div>
-<div>
-  <h1>Goals</h1>
-  <input id='goal' type='text' placeholder='Add Goal' />
-  <button id='goalBtn'>Add Goal</button>
-  <ul id='goals'></ul>
-</div>
-    <script type='text/javascript'>
+  <div>
+    <h1>Todo List</h1>
+    <input id='todo' type='text' placeholder='Add Todo' />
+    <button id='todoBtn'>Add Todo</button>
+    <ul id='todos'></ul>
+  </div>
+  <div>
+    <h1>Goals</h1>
+    <input id='goal' type='text' placeholder='Add Goal' />
+    <button id='goalBtn'>Add Goal</button>
+    <ul id='goals'></ul>
+  </div>
+  <script type='text/javascript'>
+    function generateId() {
+      return Math.random().toString(36).substring(2) + (new Date()).getTime().toString(36);
+    }
 // Library Code
 
 // pure function requirements:
@@ -25,34 +28,34 @@
 // 2. depend solely on the arguments
 // 3. do no produce side effects
 
-function createStore(reducer) {
-    // the store have four parts:
-    // the state
-    // get the state
-    // listen to changes in state
-    // update the state
+// function createStore(reducer) {
+//     // the store have four parts:
+//     // the state
+//     // get the state
+//     // listen to changes in state
+//     // update the state
 
-    let state;
-    let listeners = []; // listeners are array of functions
-    const getState = () => state // returns the state
+//     let state;
+//     let listeners = []; // listeners are array of functions
+//     const getState = () => state // returns the state
     
-    const subscribe = (listener) => { // listening the changes to the state
-        listeners.push(listener);
-        return () => {
-            listeners = listeners.filter((l) => l !== listener()); // loop through listeners to update state
-        }
-    }
+//     const subscribe = (listener) => { // listening the changes to the state
+//         listeners.push(listener);
+//         return () => {
+//             listeners = listeners.filter((l) => l !== listener); // loop through listeners to update state
+//         }
+//     }
 
-    const dispatch = (action) => { // updates the state
-        state = reducer(state, action);
-        listeners.forEach((listener) => listener);  
-    }
-    return {
-        getState,
-        subscribe,
-        dispatch
-    };
-}
+//     const dispatch = (action) => { // updates the state
+//         state = reducer(state, action);
+//         listeners.forEach((listener) => listener);  
+//     }
+//     return {
+//         getState,
+//         subscribe,
+//         dispatch
+//     }
+// }
 
 
 // App Code
@@ -99,84 +102,99 @@ function removeGoalAction (id) {
   
 function todos (state = [], action) { //todos is a reducer which is a pure function
     //reducer takes in the state and the action and returns the new state
-    switch(action.type) {
-        case ADD_TODO:
-          return state.concat([action.todo])
-        case REMOVE_TODO:
-          return state.filter((todo) => todo.id !== action.id)
-        case TOGGLE_TODO:
-          return state.map((todo) => todo.id !== action.id ? todo :
-            Object.assign({}, todo, { complete: !todo.complete }))
-        default :
-          return state
-    }
+  switch(action.type) {
+    case ADD_TODO :
+      return state.concat([action.todo]);
+    case REMOVE_TODO :
+      return state.filter((todo) => todo.id !== action.id);
+    case TOGGLE_TODO :
+      return state.map((todo) => todo.id !== action.id ? todo :
+        Object.assign({}, todo, { complete: !todo.complete }));
+    default :
+      return state;
+  }
 }
 
 // another reducer which will maintain goals
-function goals (state = [], action) { 
-    switch(action.type) {
-      case ADD_GOAL:
-        return state.concat([action.goal])
-      case REMOVE_GOAL:
-        return state.filter((goal) => goal.id !== action.id)
-      default :
-        return state
-    }
+function goals (state = [], action) {
+  switch(action.type) {
+    case ADD_GOAL :
+      return state.concat([action.goal]);
+    case REMOVE_GOAL :
+      return state.filter((goal) => goal.id !== action.id);
+    default :
+      return state;
+  }
 }
 
 // root reducer
-function app (state = {}, action) {
-    return {
-      todos: todos(state.todos, action),
-      goals: goals(state.goals, action),
-    }
-  }
+// function app (state = {}, action) {
+//   return {
+//     todos: todos(state.todos, action),
+//     goals: goals(state.goals, action),
+//   }
+// }
 
 // create the store
 
-const store = createStore(app);
+const store = Redux.createStore(Redux.combineReducers({
+  todos,
+  goals
+}));
 
 store.subscribe(() => {
-  console.log('The new state is: ', store.getState())
+  const {goals, todos} = store.getState();
+
+  document.getElementById('goals').innerHTML = '';
+  document.getElementById('todos').innerHTML = '';
+
+  goals.forEach(addGoalToDOM);
+  todos.forEach(addTodoToDOM);
 });
 
-store.subscribe(() => {
-  console.log('The new state is: ', store.getState())
-})
+// DOM code
+function addTodo () {
+  const input = document.getElementById('todo');
+  const name = input.value;
+  input.value = '';
+  store.dispatch(addTodoAction({
+    name,
+    complete: false,
+    id: generateId()
+  }));
+}
+function addGoal () {
+  const input = document.getElementById('goal');
+  const name = input.value;
+  input.value = '';
+  store.dispatch(addGoalAction({
+    id: generateId(),
+    name,
+  }));
+}
 
-store.dispatch(addTodoAction({
-  id: 0,
-  name: 'Walk the dog',
-  complete: false,
-}))
+document.getElementById('todoBtn')
+  .addEventListener('click', addTodo)
 
-store.dispatch(addTodoAction({
-  id: 1,
-  name: 'Wash the car',
-  complete: false,
-}))
+document.getElementById('goalBtn')
+  .addEventListener('click', addGoal)
 
-store.dispatch(addTodoAction({
-  id: 2,
-  name: 'Go to the gym',
-  complete: true,
-}))
-
-store.dispatch(removeTodoAction(1))
-
-store.dispatch(toggleTodoAction(0))
-
-store.dispatch(addGoalAction({
-  id: 0,
-  name: 'Learn Redux'
-}))
-
-store.dispatch(addGoalAction({
-  id: 1,
-  name: 'Lose 20 pounds'
-}))
-
-store.dispatch(removeGoalAction(0))
-    </script>
+function addTodoToDOM(todo) {
+  const node = document.createElement('li');
+  const text = document.createTextNode(todo.name);
+  node.appendChild(text);
+  
+  document.getElementById('todos')
+    .appendChild(node);
+}
+function addGoalToDOM(goal) {
+  const node = document.createElement('li');
+  const text = document.createTextNode(goal.name);
+  node.appendChild(text);
+  
+  document.getElementById('goals')
+    .append(node);
+}
+  </script>
 </body>
 </html>
