--- a/index.html
+++ b/index.html
@@ -1,224 +1,213 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Pratibha Todos Goals</title>
+  <title>Udacity Todos Goals</title>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/redux/3.7.2/redux.min.js'></script>
+  <script src='https://unpkg.com/react@16.3.0-alpha.1/umd/react.development.js'></script>
+  <script src='https://unpkg.com/react-dom@16.3.0-alpha.1/umd/react-dom.development.js'></script>
+  <script src='https://unpkg.com/babel-standalone@6.15.0/babel.min.js'></script>
 </head>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/redux/3.7.2/redux.min.js'></script>
-<script src="https://unpkg.com/react@16.3.0-alpha.1/umd/react.development.js"></script>
-<script src="https://unpkg.com/react-dom@16.3.0-alpha.1/umd/react-dom.development.js"></script>
-<script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 <body>
-  <div>
-    <h1>Todo List</h1>
-    <input id='todo' type='text' placeholder='Add Todo' />
-    <button id='todoBtn'>Add Todo</button>
-    <ul id='todos'></ul>
-  </div>
-  <div>
-    <h1>Goals</h1>
-    <input id='goal' type='text' placeholder='Add Goal' />
-    <button id='goalBtn'>Add Goal</button>
-    <ul id='goals'></ul>
-  </div>
+  <div id='app'></div>
+
   <script type='text/javascript'>
-    function generateId() {
+    function generateId () {
       return Math.random().toString(36).substring(2) + (new Date()).getTime().toString(36);
     }
-// Library Code
-
-// pure function requirements:
-// 1. return the same result if the same arguments are passed in
-// 2. depend solely on the arguments
-// 3. do no produce side effects
-
-// function createStore(reducer) {
-//     // the store have four parts:
-//     // the state
-//     // get the state
-//     // listen to changes in state
-//     // update the state
-
-//     let state;
-//     let listeners = []; // listeners are array of functions
-//     const getState = () => state // returns the state
-    
-//     const subscribe = (listener) => { // listening the changes to the state
-//         listeners.push(listener);
-//         return () => {
-//             listeners = listeners.filter((l) => l !== listener); // loop through listeners to update state
-//         }
-//     }
-
-//     const dispatch = (action) => { // updates the state
-//         state = reducer(state, action);
-//         listeners.forEach((listener) => listener);  
-//     }
-//     return {
-//         getState,
-//         subscribe,
-//         dispatch
-//     }
-// }
-
-
-// App Code
-const ADD_TODO = 'ADD_TODO'
-const REMOVE_TODO = 'REMOVE_TODO'
-const TOGGLE_TODO = 'TOGGLE_TODO'
-const ADD_GOAL = 'ADD_GOAL'
-const REMOVE_GOAL = 'REMOVE_GOAL'
-
-function addTodoAction (todo) {
-    return {
-      type: ADD_TODO,
-      todo,
+    // App Code
+    const ADD_TODO = 'ADD_TODO'
+    const REMOVE_TODO = 'REMOVE_TODO'
+    const TOGGLE_TODO = 'TOGGLE_TODO'
+    const ADD_GOAL = 'ADD_GOAL'
+    const REMOVE_GOAL = 'REMOVE_GOAL'
+    function addTodoAction (todo) {
+      return {
+        type: ADD_TODO,
+        todo,
+      }
     }
-  }
-  
-function removeTodoAction (id) {
-    return {
-      type: REMOVE_TODO,
-      id,
+    function removeTodoAction (id) {
+      return {
+        type: REMOVE_TODO,
+        id,
+      }
     }
-  }
-  
-function toggleTodoAction (id) {
-    return {
-      type: TOGGLE_TODO,
-      id,
+    function toggleTodoAction (id) {
+      return {
+        type: TOGGLE_TODO,
+        id,
+      }
     }
-  }
-  
-function addGoalAction (goal) {
-    return {
-      type: ADD_GOAL,
-      goal,
+    function addGoalAction (goal) {
+      return {
+        type: ADD_GOAL,
+        goal,
+      }
     }
-  }
-
-function removeGoalAction (id) {
-    return {
-      type: REMOVE_GOAL,
-      id,
+    function removeGoalAction (id) {
+      return {
+        type: REMOVE_GOAL,
+        id,
+      }
     }
-}
-
-const checker = (store) => (next) => (action) => {
-    if ( action.type === ADD_TODO &&
-        action.todo.name.toLowerCase().includes('bitcoin')) {
-          return alert("Nope. That's a bad idea.")
+    function todos (state = [], action) {
+      switch(action.type) {
+        case ADD_TODO :
+          return state.concat([action.todo])
+        case REMOVE_TODO :
+          return state.filter((todo) => todo.id !== action.id)
+        case TOGGLE_TODO :
+          return state.map((todo) => todo.id !== action.id ? todo :
+            Object.assign({}, todo, { complete: !todo.complete }))
+        default :
+          return state
+      }
     }
-    if ( action.type === ADD_GOAL &&
-        action.goal.name.toLowerCase().includes('bitcoin')) {
-          return alert("Nope. That's a bad idea.")
+    function goals (state = [], action) {
+      switch(action.type) {
+        case ADD_GOAL :
+          return state.concat([action.goal])
+        case REMOVE_GOAL :
+          return state.filter((goal) => goal.id !== action.id)
+        default :
+          return state
+      }
     }
-    return next(action);
-}
+    const checker = (store) => (next) => (action) => {
+      if (
+        action.type === ADD_TODO &&
+        action.todo.name.toLowerCase().includes('bitcoin')
+      ) {
+        return alert("Nope. That's a bad idea.")
+      }
+      if (
+        action.type === ADD_GOAL &&
+        action.goal.name.toLowerCase().includes('bitcoin')
+      ) {
+        return alert("Nope. That's a bad idea.")
+      }
+      return next(action)
+    }
+    const logger = (store) => (next) => (action) => {
+      console.group(action.type)
+        console.log('The action: ', action)
+        const result = next(action)
+        console.log('The new state: ', store.getState())
+      console.groupEnd()
+      return result
+    }
+    const store = Redux.createStore(Redux.combineReducers({
+      todos,
+      goals,
+    }), Redux.applyMiddleware(checker, logger))
+  </script>
 
-const logger = (store) => (next) => (action) => {
-  console.group(action.type);
-  console.log('The action: ', action);
-  const result = next(action);
-  console.log('The new state: ', store.getState());
-  console.groupEnd();
-  return result;
-}
-  
-function todos (state = [], action) { //todos is a reducer which is a pure function
-    //reducer takes in the state and the action and returns the new state
-  switch(action.type) {
-    case ADD_TODO :
-      return state.concat([action.todo]);
-    case REMOVE_TODO :
-      return state.filter((todo) => todo.id !== action.id);
-    case TOGGLE_TODO :
-      return state.map((todo) => todo.id !== action.id ? todo :
-        Object.assign({}, todo, { complete: !todo.complete }));
-    default :
-      return state;
-  }
-}
-
-// another reducer which will maintain goals
-function goals (state = [], action) {
-  switch(action.type) {
-    case ADD_GOAL :
-      return state.concat([action.goal]);
-    case REMOVE_GOAL :
-      return state.filter((goal) => goal.id !== action.id);
-    default :
-      return state;
-  }
-}
-
-// root reducer
-// function app (state = {}, action) {
-//   return {
-//     todos: todos(state.todos, action),
-//     goals: goals(state.goals, action),
-//   }
-// }
-
-// create the store
-
-const store = Redux.createStore(Redux.combineReducers({
-  todos,
-  goals
-}), Redux.applyMiddleware(checker,logger));
-
-store.subscribe(() => {
-  const {goals, todos} = store.getState();
-
-  document.getElementById('goals').innerHTML = '';
-  document.getElementById('todos').innerHTML = '';
-
-  goals.forEach(addGoalToDOM);
-  todos.forEach(addTodoToDOM);
-});
-
-// DOM code
-function addTodo () {
-  const input = document.getElementById('todo');
-  const name = input.value;
-  input.value = '';
-  store.dispatch(addTodoAction({
-    name,
-    complete: false,
-    id: generateId()
-  }));
-}
-function addGoal () {
-  const input = document.getElementById('goal');
-  const name = input.value;
-  input.value = '';
-  store.dispatch(addGoalAction({
-    id: generateId(),
-    name,
-  }));
-}
-
-document.getElementById('todoBtn')
-  .addEventListener('click', addTodo)
-
-document.getElementById('goalBtn')
-  .addEventListener('click', addGoal)
-
-function addTodoToDOM(todo) {
-  const node = document.createElement('li');
-  const text = document.createTextNode(todo.name);
-  node.appendChild(text);
-  
-  document.getElementById('todos')
-    .appendChild(node);
-}
-function addGoalToDOM(goal) {
-  const node = document.createElement('li');
-  const text = document.createTextNode(goal.name);
-  node.appendChild(text);
-  
-  document.getElementById('goals')
-    .append(node);
-}
+  <script type='text/babel'>
+    function List (props) {
+      return (
+        <ul>
+          {props.items.map((item) => (
+            <li key={item.id}>
+              <span
+                onClick={() => props.toggle && props.toggle(item.id)}
+                style={{textDecoration: item.complete ? 'line-through' : 'none'}}>
+                  {item.name}
+              </span>
+              <button onClick={() => props.remove(item)}>
+                X
+              </button>
+            </li>
+          ))}
+        </ul>
+      )
+    }
+    class Todos extends React.Component {
+      addItem = (e) => {
+        e.preventDefault()
+        const name = this.input.value
+        this.input.value = ''
+        this.props.store.dispatch(addTodoAction({
+          name,
+          complete: false,
+          id: generateId()
+        }))
+      }
+      removeItem = (todo) => {
+        this.props.store.dispatch(removeTodoAction(todo.id))
+      }
+      toggleItem = (id) => {
+        this.props.store.dispatch(toggleTodoAction(id))
+      }
+      render() {
+        return (
+          <div>
+            <h1>Todo List</h1>
+            <input
+              type='text'
+              placeholder='Add Todo'
+              ref={(input) => this.input = input}
+            />
+            <button onClick={this.addItem}>Add Todo</button>
+            <List
+              toggle={this.toggleItem}
+              items={this.props.todos}
+              remove={this.removeItem}
+            />
+          </div>
+        )
+      }
+    }
+    class Goals extends React.Component {
+      addItem = (e) => {
+        e.preventDefault()
+        const name = this.input.value
+        this.input.value = ''
+        this.props.store.dispatch(addGoalAction({
+          id: generateId(),
+          name,
+        }))
+      }
+      removeItem = (goal) => {
+        this.props.store.dispatch(removeGoalAction(goal.id))
+      }
+      render() {
+        return (
+          <div>
+            <h1>Goals</h1>
+            <input
+              type='text'
+              placeholder='Add Goal'
+              ref={(input) => this.input = input}
+            />
+            <button onClick={this.addItem}>Add Goal</button>
+            <List
+              items={this.props.goals}
+              remove={this.removeItem}
+            />
+          </div>
+        )
+      }
+    }
+    class App extends React.Component {
+      componentDidMount () {
+        const { store } = this.props
+        store.subscribe(() => this.forceUpdate())
+      }
+      render() {
+        const { store } = this.props
+        const { todos, goals } = store.getState()
+        return (
+          <div>
+            <Todos todos={todos} store={this.props.store} />
+            <Goals goals={goals} store={this.props.store} />
+          </div>
+        )
+      }
+    }
+    ReactDOM.render(
+      <App store={store}/>,
+      document.getElementById('app')
+    )
   </script>
 </body>
 </html>
